# cppstream

./: .buildinfo  .flake8  .gitignore  .pre-commit-config.yaml  README.rst  examples.py  genindex.html  index.html  objects.inv  pyproject.toml  report.html  search.html  searchindex.js  streams.mmd  test.py
.doctrees/: environment.pickle  index.doctree
.doctrees/api/: base.doctree  const.doctree  file.doctree  index.doctree  mod.doctree  out.doctree
.github/workflows/: check-docs.yaml  format.yaml  lint.yaml  publish-docs.yaml  test.yaml
_sources/api/: const.rst.txt  file.rst.txt  index.rst.txt
api/: base.html  const.html  file.html  index.html  mod.html  out.html
cppstream/: __init__.py  base.py  endl.py
cppstream/_out/: cout.py  fout.py  out.py
docs/source/: conf.py  index.rst
docs/source/api/: base.rst  const.rst  mod.rst  out.rst
iostream/: __init__.py  base.py
tests/: test_base_stream.py  test_cout.py  test_endl.py  test_filestream.py  test_outfilestream.py
