[tool.poetry]
name = "iostream"
version = "0.1.0"
description = "c++-style io streams"
authors = ["mrlegohead0x45 <mrlegohead0x45@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
black = "^22.1.0"
isort = "^5.10.1"

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
