[tool.poetry]
name = "cppstream"
version = "0.1.0"
description = "c++-style io streams"
authors = ["mrlegohead0x45 <mrlegohead0x45@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
isort = "^5.10.1"
Sphinx = "^4.5.0"
flake8 = "^4.0.1"
mypy = "^0.950"
pre-commit = "^2.18.1"
pytest = "^7.1.2"

[tool.isort]
profile = "black"

[tool.mypy]
exclude = "examples.py"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
